--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,19 +1,36 @@
 pipeline {
-    /* je suis un commentaire */
     agent any
- 
+    parameters {
+        string(name: 'NAME', description: 'Please tell me your name?')
+
+        text(name: 'DESC', description: 'Describe about the job details')
+
+        booleanParam(name: 'SKIP_TEST', description: 'Want to skip running Test cases?')
+
+        choice(name: 'BRANCH', choices: ['Master', 'Dev'], description: 'Choose branch')
+
+        password(name: 'SONAR_SERVER_PWD', description: 'Enter SONAR password')
+    }
     stages {
-        stage('HELLO') {
+        stage('Printing Parameters') {
             steps {
-                echo 'Hello World'
+                echo "Hello ${params.NAME}"
+
+                echo "Job Details: ${params.DESC}"
+
+                echo "Skip Running Test case ?: ${params.SKIP_TEST}"
+
+                echo "Branch Choice: ${params.BRANCH}"
+
+                echo "SONAR Password: ${params.SONAR_SERVER_PWD}"
             }
         }
-        stage('BUILD') {
+    stage('BUILD') {
             steps {
                 echo 'Developpement'
             }
         }
-        stage('Test') {
+    stage('Test') {
             steps {
                 echo 'Testing'
             }
