--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,44 +1,63 @@
 pipeline {
     agent any
+
     parameters {
-        string(name: 'NAME', description: 'Please tell me your name?')
-
-        text(name: 'DESC', description: 'Describe about the job details')
-
-        booleanParam(name: 'SKIP_TEST', description: 'Want to skip running Test cases?')
-
-        choice(name: 'BRANCH', choices: ['Master', 'Dev'], description: 'Choose branch')
-
-        password(name: 'SONAR_SERVER_PWD', description: 'Enter SONAR password')
+        booleanParam(name: 'SKIP_STAGES', defaultValue: false, description: 'Skip du test')
     }
+
     stages {
-        stage('Printing Parameters') {
+        stage('Setup') {
             steps {
-                echo "Hello ${params.NAME}"
-
-                echo "Job Details: ${params.DESC}"
-
-                echo "Skip Running Test case ?: ${params.SKIP_TEST}"
-
-                echo "Branch Choice: ${params.BRANCH}"
-
-                echo "SONAR Password: ${params.SONAR_SERVER_PWD}"
+                script {
+                    if (params.SKIP_STAGES) {
+                        echo "Skip du test des stages"
+                    } else {
+                        echo "Continuations du test du stage car il est configurer en tant que false"
+                    }
+                }
             }
         }
-    stage('BUILD') {
+
+        stage('Build') {
+            when {
+                expression {
+                    return !params.SKIP_STAGES
+                }
+            }
             steps {
-                echo 'Developpement'
+                echo 'construction du projet'
+                // Add your build steps here
             }
         }
-    stage('Test') {
+
+        stage('Test') {
+            when {
+                expression {
+                    return !params.SKIP_STAGES
+                }
+            }
             steps {
-                echo 'Testing'
+                echo 'test du projet'
+
             }
         }
-        stage('DEPLOY') {
-            steps {
-                echo 'Mise en Production'
+
+        stage('déploiement') {
+            when {
+                expression {
+                    return !params.SKIP_STAGES
+                }
             }
+            steps {
+                echo 'déploiement'
+
+            }
+        }
+    }
+
+    post {
+        always {
+            echo 'Pipeline complété.'
         }
     }
 }
